<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SignUp.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signUpTextImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_signup_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameSignUpTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="72dp"
            android:background="@drawable/input_text_round"
            android:elevation="4dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/nameSignUpText"
                android:layout_width="330dp"
                android:layout_height="30dp"
                android:background="@drawable/input_text_round"
                android:fontFamily="@font/source_sans_pro_bold"
                android:hint="@string/fullNameSignUpHint"
                android:inputType="textPersonName"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                tools:text="@string/fullNameSignUpHint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailSignUpTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:background="@drawable/input_text_round"
            android:elevation="4dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/emailSignUpText"
                android:layout_width="330dp"
                android:layout_height="30dp"
                android:background="@drawable/input_text_round"
                android:fontFamily="@font/source_sans_pro_bold"
                android:hint="@string/emailSingUpHint"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                tools:text="@string/emailSingUpHint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberSignUpTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:background="@drawable/input_text_round"
            android:elevation="4dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/phoneNumberSignUpText"
                android:layout_width="330dp"
                android:layout_height="30dp"
                android:background="@drawable/input_text_round"
                android:fontFamily="@font/source_sans_pro_bold"
                android:hint="@string/phoneNumberSignUpHint"
                android:inputType="phone"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                tools:text="@string/phoneNumberSignUpHint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passSignUpTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:background="@drawable/input_text_round"
            android:elevation="4dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passSignUpText"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:background="@drawable/input_text_round"
                android:fontFamily="@font/source_sans_pro_bold"
                android:hint="@string/passSignUpHint"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="6dp"
                tools:text="@string/passSignUpHint" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="36dp"
            android:elevation="6dp"
            android:fontFamily="@font/source_sans_pro_bold"
            android:paddingStart="75dp"
            android:paddingTop="10dp"
            android:paddingEnd="75dp"
            android:paddingBottom="10dp"
            android:text="@string/signUpButtonLabel"
            android:textAllCaps="true"
            android:textAppearance="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/backgroundColor"
            android:textSize="18sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="20dp"
            app:iconTint="@color/backgroundColor" />


    </LinearLayout>
</LinearLayout>