...
            android:layout_gravity="center"
            android:background="@drawable/input_text_round"
            android:elevation="4dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/emailForgotPassText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/input_text_round"
                android:fontFamily="@font/source_sans_pro_bold"
                android:hint="@string/emailForgotPassHint"
                android:inputType="textEmailAddress"
...
                android:drawableTint="@color/backgroundColor"
                tools:text="@string/emailForgotPassHint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendPassEmailButton"
            android:layout_width="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="6dp"
            android:fontFamily="@font/source_sans_pro_bold"
...
