<resources>
    <string name="app_name">Cheap Fashion</string>

    <string name="emptyText"></string>
    <string name="emailLoginHint">Email</string>
    <string name="emailForgotPassHint">Email</string>
    <string name="emailSingUpHint">Email</string>
    <string name="fullNameSignUpHint">Name Surname</string>
    <string name="phoneNumberSignUpHint">Phone Number</string>
    <string name="passSignUpHint">Password</string>
...
